Landing about section responsive and completed. Added navbar container and navbar max width changed to 1200px

--- a/index.html
+++ b/index.html
@@ -23,31 +23,50 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Conner Chappell</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link animatedBorder" aria-current="page" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link animatedBorder" href="#">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link animatedBorder" href="#">Contact</a>
-                    </li>
-                </ul>
+    <div class="navbarContainer">
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Conner Chappell</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link animatedBorder" aria-current="page" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link animatedBorder" href="#">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link animatedBorder" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </div>
+    
 
     <!-- Main -->
     <main>
+        <!-- About Section -->
+        <section id="landingAbout">
+            <div class="landingAboutDescription">
+                <p>I'm Conner, <br> a Web Designer and Developer</p>
+            </div>
+
+            <div class="morphing">
+                <div class="word">Welcome</div>
+                <div class="word">To</div>
+                <div class="word">My</div>
+                <div class="word">Portfolio!</div>
+            </div>
+
+            <img class="scrollIcon" src="./images/scroll-down.svg" alt="scroll down icon">
+        </section>
+
 
     </main>
 
