Added section divider between landing about and projects

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             </div>
         </nav>
     </div>
-    
+
 
     <!-- Main -->
     <main>
-        <!-- About Section -->
+        <!-- Landing Page About Section -->
         <section id="landingAbout">
             <div class="landingAboutDescription">
                 <p>I'm Conner, <br> a Web Designer and Developer</p>
@@ -67,6 +67,13 @@
             <img class="scrollIcon" src="./images/scroll-down.svg" alt="scroll down icon">
         </section>
 
+        <div class="dividerSection">
+            <img src="./images/divider.svg" alt="Section Divider">
+        </div>
+        
+        <!-- <section id="projectsSection">
+            <h1>Projects</h1>
+        </section> -->
 
     </main>
 
