--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a class="nav-link animatedBorder" aria-current="page" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link animatedBorder" href="#">Projects</a>
+                            <a class="nav-link animatedBorder" href="#projectsSection">Projects</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link animatedBorder" href="#">Contact</a>
@@ -71,9 +71,65 @@
             <img src="./images/divider.svg" alt="Section Divider">
         </div>
         
-        <!-- <section id="projectsSection">
+        <!-- Projects Section -->
+        <section id="projectsSection">
             <h1>Projects</h1>
-        </section> -->
+
+            <div class="projectsContainer">
+
+                <a href="https://3780-vue-fitness-tracker.netlify.app/" target="_blank">
+                    <div class="projectCard">
+                        <div class="cardInfoTop">
+                            <h3>Simple Vue Fitness Tracker</h3>
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+                        <img src="./images/fitness-tracker-mockup.svg" alt="Mockup of fitness app">
+                        <div class="cardInfoBottom">
+                            <p>Web App</p>
+                            <object>
+                                <a href="https://github.com/ConnerChappell/fitness-tracker2" target="_blank">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </object>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="http://dreamer.connerchappell.com/" target="_blank">
+                    <div class="projectCard">
+                        <div class="cardInfoTop">
+                            <h3>Dreamer Vacations LLC</h3>
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+                        <img src="./images/dreamer-vacations-mockup.svg" alt="Mockup of fitness app">
+                        <div class="cardInfoBottom">
+                            <p>Website</p>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- <div class="projectCard">
+                    <div class="cardInfoTop">
+                        <h3>Simple Vue Fitness Tracker</h3>
+                        <a href="https://3780-vue-fitness-tracker.netlify.app/" target="_blank">
+                            <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </div>
+                    <img src="./images/fitness-tracker-mockup.svg" alt="Mockup of fitness app">
+                    <div class="cardInfoBottom">
+                        <p>Web App</p>
+                        <a href="https://github.com/ConnerChappell/fitness-tracker2" target="_blank">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </div>
+                </div> -->
+
+            </div>
+        </section>
+
+
+
+
 
     </main>
 
