Added pokemon project

--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
             <h1>Projects</h1>
 
             <div class="projectsContainer">
-
                 <a href="https://3780-vue-fitness-tracker.netlify.app/" target="_blank">
                     <div class="projectCard">
                         <div class="cardInfoTop">
@@ -101,28 +100,32 @@
                             <h3>Dreamer Vacations LLC</h3>
                             <i class="fas fa-arrow-right"></i>
                         </div>
-                        <img src="./images/dreamer-vacations-mockup.svg" alt="Mockup of fitness app">
+                        <img src="./images/dreamer-vacations-mockup.svg" alt="Mockup of Dreamer Vacations LLC">
                         <div class="cardInfoBottom">
                             <p>Website</p>
                         </div>
                     </div>
                 </a>
 
-                <!-- <div class="projectCard">
-                    <div class="cardInfoTop">
-                        <h3>Simple Vue Fitness Tracker</h3>
-                        <a href="https://3780-vue-fitness-tracker.netlify.app/" target="_blank">
-                            <i class="fas fa-arrow-right"></i>
-                        </a>
-                    </div>
-                    <img src="./images/fitness-tracker-mockup.svg" alt="Mockup of fitness app">
-                    <div class="cardInfoBottom">
-                        <p>Web App</p>
-                        <a href="https://github.com/ConnerChappell/fitness-tracker2" target="_blank">
-                            <i class="fab fa-github"></i>
-                        </a>
-                    </div>
-                </div> -->
+                <div class="projectsContainer">
+                    <a href="https://connerchappell-dgm1600.netlify.app/pokemon.html" target="_blank">
+                        <div class="projectCard">
+                            <div class="cardInfoTop">
+                                <h3>Pokemon API Trading Cards</h3>
+                                <i class="fas fa-arrow-right"></i>
+                            </div>
+                            <img src="./images/pokemon-mockup.svg" alt="Mockup of Pokemon Trading Cards">
+                            <div class="cardInfoBottom">
+                                <p>Web App</p>
+                                <object>
+                                    <a href="https://github.com/ConnerChappell/personal_portfolio_conner/blob/master/pokemon.js" target="_blank">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                </object>
+                            </div>
+                        </div>
+                    </a>
+
 
             </div>
         </section>
