--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
-    
+
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
     <!-- Main Styles -->
     <link rel="stylesheet" href="css/styles.css">
@@ -70,7 +72,7 @@
         <div class="dividerSection">
             <img src="./images/divider.svg" alt="Section Divider">
         </div>
-        
+
         <!-- Projects Section -->
         <section id="projectsSection">
             <h1>Projects</h1>
@@ -107,24 +109,43 @@
                     </div>
                 </a>
 
-                <div class="projectsContainer">
-                    <a href="https://connerchappell-dgm1600.netlify.app/pokemon.html" target="_blank">
-                        <div class="projectCard">
-                            <div class="cardInfoTop">
-                                <h3>Pokemon API Trading Cards</h3>
-                                <i class="fas fa-arrow-right"></i>
-                            </div>
-                            <img src="./images/pokemon-mockup.svg" alt="Mockup of Pokemon Trading Cards">
-                            <div class="cardInfoBottom">
-                                <p>Web App</p>
-                                <object>
-                                    <a href="https://github.com/ConnerChappell/personal_portfolio_conner/blob/master/pokemon.js" target="_blank">
-                                        <i class="fab fa-github"></i>
-                                    </a>
-                                </object>
-                            </div>
+                <a href="https://connerchappell-dgm1600.netlify.app/pokemon.html" target="_blank">
+                    <div class="projectCard">
+                        <div class="cardInfoTop">
+                            <h3>Pokemon API Trading Cards</h3>
+                            <i class="fas fa-arrow-right"></i>
                         </div>
-                    </a>
+                        <img src="./images/pokemon-mockup.svg" alt="Mockup of Pokemon Trading Cards">
+                        <div class="cardInfoBottom">
+                            <p>Web App</p>
+                            <object>
+                                <a href="https://github.com/ConnerChappell/personal_portfolio_conner/blob/master/pokemon.js"
+                                    target="_blank">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </object>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="https://medium.com/conner-chappell/web-page-for-bronco-motors-229388429403" target="_blank">
+                    <div class="projectCard">
+                        <div class="cardInfoTop">
+                            <h3>Bronco Motors Buy Centers</h3>
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+                        <img src="./images/bronco-motors-mockup.svg" alt="Mockup of Bronco Motors Buy Center">
+                        <div class="cardInfoBottom">
+                            <p>Website</p>
+                            <object>
+                                <a href="https://github.com/ConnerChappell/bronco_motors_buy_center"
+                                    target="_blank">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </object>
+                        </div>
+                    </div>
+                </a>
 
 
             </div>
