Added zion national park app to projects

--- a/index.html
+++ b/index.html
@@ -147,6 +147,19 @@
                     </div>
                 </a>
 
+                <a href="https://medium.com/conner-chappell/national-park-app-zion-d63c4c759039" target="_blank">
+                    <div class="projectCard">
+                        <div class="cardInfoTop">
+                            <h3>National Park App: Zion</h3>
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+                        <img src="./images/zion-mockup.svg" alt="Mockup of Zion National Park app">
+                        <div class="cardInfoBottom">
+                            <p>UX / UI</p>
+                        </div>
+                    </div>
+                </a>
+
 
             </div>
         </section>
