Added soccerbible app to projects

--- a/index.html
+++ b/index.html
@@ -160,6 +160,19 @@
                     </div>
                 </a>
 
+                <a href="./assets/soccerbible_app.pdf" target="_blank">
+                    <div class="projectCard">
+                        <div class="cardInfoTop">
+                            <h3>Soccerbible App</h3>
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+                        <img src="./images/soccerbible-mockup.svg" alt="Mockup of Soccerbible app">
+                        <div class="cardInfoBottom">
+                            <p>UX / UI</p>
+                        </div>
+                    </div>
+                </a>
+
 
             </div>
         </section>
