--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <a class="nav-link animatedBorder" href="#projectsSection">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link animatedBorder" href="#">Contact</a>
+                            <a class="nav-link animatedBorder" href="#contactSection">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -172,19 +172,39 @@
                         </div>
                     </div>
                 </a>
-
-
             </div>
+
+            <p>Check out other projects, case studies, and even VR stuff at my <a class="inlineLink" href="https://medium.com/conner-chappell" target="_blank">Medium</a> publication!</p>
         </section>
 
-
-
-
-
+        <div class="dividerSection">
+            <img src="./images/divider.svg" alt="Section Divider">
+        </div>
     </main>
 
-
-
+    <div class="footerContainer">
+        <footer id="contactSection">
+            <p>&copy; Conner Chappell</p>
+            <a href="#landingAbout" class="backToTop animatedBorder">
+                <i class="fas fa-arrow-up"></i>
+                <p>Back to Top</p>
+            </a>
+            <div class="contactLinks">
+                <a href="mailto:conner.chappell123@gmail.com">
+                    <i class="fas fa-envelope-square"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/conner-chappell/" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://github.com/ConnerChappell" target="_blank">
+                    <i class="fab fa-github-square"></i>
+                </a>
+                <a href="https://twitter.com/conner_chappell" target="_blank">
+                    <i class="fab fa-twitter-square"></i>
+                </a>
+            </div>
+        </footer>
+    </div>
 
 
     <!-- Bootstrap JS Bundle -->
