Added and finished about me page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="navbarContainer">
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Conner Chappell</a>
+                <a class="navbar-brand" href="./index.html">Conner Chappell</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link animatedBorder" aria-current="page" href="#">About</a>
+                            <a class="nav-link animatedBorder" href="./about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link animatedBorder" href="#projectsSection">Projects</a>
