--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
             <div class="skills">
                 <ul>
                     <li>- Web Design</li>
-                    <li>- Web Deverlopment</li>
+                    <li>- Web Development</li>
                     <li>- HTML</li>
                     <li>- CSS</li>
                     <li>- JavaScript</li>
@@ -85,9 +85,9 @@
                     <li>- Bootstrap</li>
                     <li>- Wordpress</li>
                     <li>- Git</li>
-                    <li>- React.js *</li>
-                    <li>- Vue.js *</li>
-                    <li>- Svelte *</li>
+                    <li>- React.js</li>
+                    <li>- Vue.js</li>
+                    <li>- Svelte</li>
                     <li>- Wireframing</li>
                     <li>- Prototyping</li>
                     <li>- XD</li>
