Fixed landing description & added premier league react app

--- a/index.html
+++ b/index.html
@@ -99,6 +99,24 @@
                     </div>
                 </a>
 
+                <a href="https://3790-initial-react-app.netlify.app/" target="_blank">
+                    <div class="projectCard">
+                        <div class="cardInfoTop">
+                            <h3>Premier League Teams React App</h3>
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+                        <img src="./images/premier-league-mockup.svg" alt="Mockup of fitness app">
+                        <div class="cardInfoBottom">
+                            <p>Web App</p>
+                            <object>
+                                <a href="https://github.com/ConnerChappell/3790-initial-react-app" target="_blank">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </object>
+                        </div>
+                    </div>
+                </a>
+
                 <a href="http://dreamer.connerchappell.com/" target="_blank">
                     <div class="projectCard">
                         <div class="cardInfoTop">
