--- a/about.html
+++ b/about.html
@@ -83,14 +83,14 @@
                     <li>- HTML</li>
                     <li>- CSS</li>
                     <li>- JavaScript</li>
+                    <li>- React.js</li>
+                    <li>- Vue.js</li>
+                    <!-- <li>- Svelte</li> -->
+                    <li>- Git</li>
                     <li>- SCSS</li>
                     <li>- LESS</li>
                     <li>- Bootstrap</li>
                     <li>- Wordpress</li>
-                    <li>- Git</li>
-                    <li>- React.js</li>
-                    <li>- Vue.js</li>
-                    <li>- Svelte</li>
                     <li>- Wireframing</li>
                     <li>- Prototyping</li>
                     <li>- XD</li>
