Added react soccer app project

--- a/index.html
+++ b/index.html
@@ -81,6 +81,24 @@
             <h1>Projects</h1>
 
             <div class="projectsContainer">
+                <a href="https://3790-react-soccer-app-conner-chappell.netlify.app/" target="_blank">
+                    <div class="projectCard">
+                        <div class="cardInfoTop">
+                            <h3>React Soccer App</h3>
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
+                        <img src="./images/react-soccer-app-mockup.svg" alt="Mockup of fitness app">
+                        <div class="cardInfoBottom">
+                            <p>Web App</p>
+                            <object>
+                                <a href="https://github.com/ConnerChappell/3790-react-soccer-app" target="_blank">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </object>
+                        </div>
+                    </div>
+                </a>
+
                 <a href="https://3780-vue-fitness-tracker.netlify.app/" target="_blank">
                     <div class="projectCard">
                         <div class="cardInfoTop">
@@ -92,24 +110,6 @@
                             <p>Web App</p>
                             <object>
                                 <a href="https://github.com/ConnerChappell/fitness-tracker2" target="_blank">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                            </object>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="https://3790-initial-react-app.netlify.app/" target="_blank">
-                    <div class="projectCard">
-                        <div class="cardInfoTop">
-                            <h3>Premier League Teams React App</h3>
-                            <i class="fas fa-arrow-right"></i>
-                        </div>
-                        <img src="./images/premier-league-mockup.svg" alt="Mockup of fitness app">
-                        <div class="cardInfoBottom">
-                            <p>Web App</p>
-                            <object>
-                                <a href="https://github.com/ConnerChappell/3790-initial-react-app" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
                             </object>
